--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     padding: 0;
 
-    background-image: url('../img/background.jpeg');
+    background-image: url('./assets/img/background.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -80,8 +80,13 @@ span {
     width: 45%;
     
     margin-top: 1.5rem;
-    padding: 0.5rem;
-    border: 1px solid black;
+    padding: 1.5rem;
+    border: 4px solid white;
+    background: rgba( 70, 70, 70, 0.35 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 9px );
+    -webkit-backdrop-filter: blur( 9px );
+    border-radius: 10px;
 
-
+    color: white;
 }
